--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,10 +17,10 @@ doc_title: 'Implementation of Image Difference Decorrelation'
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-    - 'David J Reiss, Robert H. Lupton'
+    - 'David J Reiss, Robert H Lupton'
 
 # Current document version
-last_revised: '2016-06-30'
+last_revised: '2016-06-23'
 
 # Version. Use Semvar, e.g., 1.0, including .dev, as necessary
 # This version string should correspond to the git tag when the document is published on Zenodo
