--- a/technote.toml
+++ b/technote.toml
@@ -9,6 +9,7 @@ organization.ror = "https://ror.org/048g3cy84"
 license.id = "CC-BY-4.0"
 date_created = 2016-06-14T00:03:48Z
 date_updated = 2016-12-05T18:52:15Z
+doi = "https://doi.org/10.71929/rubin/2586490"
 [[technote.authors]]
 name = {given = "David J.", family = "Reiss"}
 internal_id = "reissdj"
